	* Current build 40.	

2010-06-July  Marco Randazzo <marco.randazzo@iit.it>
	* Added various CAN mesages to set the impedance of a joint
	* Impedance velocity mode separated by Impedance Position Mode
	* Current build 41.	

2010-26-July  Marco Randazzo <marco.randazzo@iit.it>
	* New decoupling matrix for torque control
 	* IMPORTANT: in function can_send_broadcast() now PWM is transmitted BEFORE the decoupling.
 	             function decouple_dutycycle_new_joint() expects transmitted torques at the joint level (before decoupling),
		     while the old function decouple_dutycycle() expects torques at motor level (after decoupling) 
		     you can change this behavior by setting/unsetting the macro USE_NEW_DECOUPLING in decoupling.h 
	* Current build 43
	
2010-02-Aug  Marco Randazzo <marco.randazzo@iit.it>
    * receiving a calibration command (_calibrated[i]==true) is now mandatory in order to turn PWM ON
	* Current build 44

2010-19-Aug  Marco Randazzo <marco.randazzo@iit.it>
	* torque error is now broadcasted separetly by position error.
	* A new broadcast message, CAN_BCAST_PID_ERROR, is introduced, that contains position error and torque error.
	* CAN_BCAST_CURRENT now contains only the current information, not the pid error.
	* Current build 46
	
2010-31-Aug  Maggiali Marco <marco.maggiali@iit.t>
	* fix the error in the CAN_read (there is a check in the LENGHT of the packet if it is <8)
	* changed the AD setup. Now it is sync with the PWM.
	* added the function get_current(jnt)
	* Current build 47.

2010-15-Sept  Maggiali Marco <marco.maggiali@iit.t>
	* Removed useless code in the step_trajectory function
	* Changed the AD setup. Now it is sync with the PWM and it has a frequency of 10KHz.
	* The reload of the PWM is 10KHz as well, but the frequency of the PWM is still 30KHz.
	* Current build 48.

2010-23-Sept  Marco Randazzo <marco.randazzo@iit.it>
	* fixed step_trajectory() problem. The code was precedently removed has been restored.
	* Current build 49.	